--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,76 @@
-.App {
-  text-align: center;
+.data-table {
+   
+  width: 80%;
+  border-collapse: collapse;
+  font-size: 14px;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  color: #333;
+  margin: 20px 0;
+  background: #fff;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.data-table th,
+.data-table td {
+  padding: 12px 15px;
+  text-align: left;
+  vertical-align: middle;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.data-table th {
+  font-weight: bold;
+  background: #f5f5f5;
+  border-bottom: 2px solid #ddd;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.data-table td {
+  border-bottom: 1px solid #ddd;
+}
+
+.data-table tbody tr:nth-child(even) {
+  background: #f1f1f1;
+}
+
+.data-table tbody tr:hover {
+  background: #e0f8ff;
+}
+
+.update-button {
+  background-color: #4CAF50;
+  /* Green */
+  border: none;
   color: white;
+  padding: 10px 16px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 14px;
+  margin-right: 5px;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.update-button:hover {
+  background-color: #3e8e41;
+  /* Dark green */
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.delete-button {
+  background-color: #f44336;
+  /* Red */
+  border: none;
+  color: white;
+  padding: 10px 16px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 14px;
+  margin-right: 5px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.delete-button:hover {
+  background-color: #e53935;
+  /* Dark red */
 }
